--- a/index.html
+++ b/index.html
@@ -9,49 +9,51 @@
 <body>
 	<center><h1>DotaMarket</h1></center>
 
-<div>
+<div class="menu">
 	<h2>Ассортимент</h2>
+	<a href="https://dota2.ru/items/mask-of-madness/">
 	<div class="first_product">
-		<a href="https://dota2.ru/items/mask-of-madness/">
 		<img src="mom.jpg">
 		<h5>Mask of Madness</h5>
 		<h5>Цена: <img class="gold" src="gold.png"> 1900</h5>
-		</a>
 	</div>
+	</a>
 
+	<a href="https://dota2.ru/items/hand-of-midas/">
 	<div class="second_product">
-		<a href="https://dota2.ru/items/hand-of-midas/">
 		<img src="midas.jpg">
 		<h5>Hand of Midas</h5>
 		<h5>Цена: <img class="gold" src="gold.png"> 2200</h5>
-		</a>
 	</div>
+	</a>
 
+	<a href="https://dota2.ru/items/vladmirs-offering/">
 	<div class="third_product">
-		<a href="https://dota2.ru/items/vladmirs-offering/">
 		<img src="vladmir.jpg">
 		<h5>Vladimir Putin</h5>
 		<h5>Цена: <img class="gold" src="gold.png"> 2200</h5>
-		</a>
 	</div>
+	</a>
 
+	<a href="https://dota2.ru/items/parasma/">
 	<div class="fourth_product">
-		<a href="">
-		<img src="">
-		<h5>Какиш</h5>
-		<h5>Цена: <img class="gold" src="gold.png"></h5>
-		</a>
+		<img src="parasma.jpg">
+		<h5>Parasha</h5>
+		<h5>Цена: <img class="gold" src="gold.png">5575</h5>
 	</div>
+	</a>
 
+	<a href="https://dota2.ru/items/moon-shard/">
 	<div class="five_product">
-		<a href="">
-		<img src="">
-		<h5>Какашка</h5>
-		<h5>Цена: <img class="gold" src="gold.png"></h5>
-		</a>
+		<img src="moon_shard.jpg">
+		<h5>Moon Shard</h5>
+		<h5>Цена: <img class="gold" src="gold.png">4000</h5>
 	</div>
+	</a>
+
 </div>
 
+<div class="info"></div>
 
 </body>
 </html>
