--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>DotaMarket</title>
 </head>
 <body>
+
 	<center><h1>DotaMarket</h1></center>
 
 <div class="menu">
@@ -53,7 +54,11 @@
 
 </div>
 
-<div class="info"></div>
+<div class="bg_panel"></div>
+
+<div class="left_panel">
+	<button class="main_menu" > </button>
+</div>
 
 </body>
 </html>
