--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 	<center><h1>DotaMarket</h1></center>
 
 <div class="menu">
+	<header>
 	<h2>Ассортимент</h2>
 	<a href="https://dota2.ru/items/mask-of-madness/">
-	<div class="first_product">
+	<div class="product">
 		<img src="mom.jpg">
 		<h5>Mask of Madness</h5>
 		<h5>Цена: <img class="gold" src="gold.png"> 1900</h5>
@@ -21,7 +22,7 @@
 	</a>
 
 	<a href="https://dota2.ru/items/hand-of-midas/">
-	<div class="second_product">
+	<div class="product">
 		<img src="midas.jpg">
 		<h5>Hand of Midas</h5>
 		<h5>Цена: <img class="gold" src="gold.png"> 2200</h5>
@@ -29,7 +30,7 @@
 	</a>
 
 	<a href="https://dota2.ru/items/vladmirs-offering/">
-	<div class="third_product">
+	<div class="product">
 		<img src="vladmir.jpg">
 		<h5>Vladimir Putin</h5>
 		<h5>Цена: <img class="gold" src="gold.png"> 2200</h5>
@@ -37,7 +38,7 @@
 	</a>
 
 	<a href="https://dota2.ru/items/parasma/">
-	<div class="fourth_product">
+	<div class="product">
 		<img src="parasma.jpg">
 		<h5>Parasha</h5>
 		<h5>Цена: <img class="gold" src="gold.png">5575</h5>
@@ -45,13 +46,102 @@
 	</a>
 
 	<a href="https://dota2.ru/items/moon-shard/">
-	<div class="five_product">
+	<div class="product">
 		<img src="moon_shard.jpg">
 		<h5>Moon Shard</h5>
 		<h5>Цена: <img class="gold" src="gold.png">4000</h5>
 	</div>
 	</a>
 
+	<a href="https://dota2.ru/items/divine-rapier/">
+	<div class="product">
+		<img src="divine_rapier.jpg">
+		<h5>Divine Rapier</h5>
+		<h5>Цена: <img class="gold" src="gold.png">5600</h5>
+	</div>
+	</a>
+
+	<a href="https://dota2.ru/items/dagon/">
+	<div class="product">
+		<img src="dagon.jpg">
+		<h5>Dagon</h5>
+		<h5>Цена: <img class="gold" src="gold.png">2850</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	<a href="">
+	<div class="product">
+		<img src="">
+		<h5>item</h5>
+		<h5>Цена: <img class="gold" src="gold.png">####</h5>
+	</div>
+	</a>
+
+	</header>
 </div>
 
 <div class="bg_panel"></div>
