--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 	<title>DotaMarket</title>
 </head>
+
 <body>
 
 	<center><h1>DotaMarket</h1></center>
@@ -147,8 +148,19 @@
 <div class="bg_panel"></div>
 
 <div class="left_panel">
-	<button class="main_menu" > </button>
+	<button onclick="" class="button_main_menu" >░░</button>
+</div>
+<div class="main_menu" id="main_menu">
+	<center><p>Menu</p></center>
+	<div class="button_main_menu_panel">
+		<button class="button_main">1</button>
+		<button class="button_main">2</button>
+		<button class="button_main">3</button>
+		<button class="button_main">4</button>
+		<button class="button_main">5</button>
+	</div>
 </div>
 
+<script src="index.js"></script>
 </body>
 </html>
