--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	<button onclick="" class="button_main_menu" >░░</button>
 </div>
 <div class="main_menu" id="main_menu">
-	<center><p>Menu</p></center>
+	<center><p>DotaMarket</p></center>
 	<div class="button_main_menu_panel">
 		<button class="button_main">1</button>
 		<button class="button_main">2</button>
